--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "start": "bsb -make-world -w"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cxa/bs-websockets.git"
+  },
   "author": "CHEN Xian-an <xianan.chen@gmail.com>",
   "license": "MIT",
   "devDependencies": {
